.metadata/.plugins/org.eclipse.cdt.ui/LAB_2.build.log
22:43:14 **** Incremental Build of configuration Debug for project LAB_2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:217:13: error: invalid storage class for function 'MX_TIM2_Init'
  217 | static void MX_TIM2_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:262:13: error: invalid storage class for function 'MX_GPIO_Init'
  262 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:334:1: error: expected declaration or statement at end of input
  334 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:52:13: warning: 'MX_GPIO_Init' used but never defined
   52 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:53:13: warning: 'MX_TIM2_Init' used but never defined
   53 | static void MX_TIM2_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:325:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  325 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:315:8: warning: 'HAL_TIM_PeriodElapsedCallback' defined but not used [-Wunused-function]
  315 |   void HAL_TIM_PeriodElapsedCallback(TIM_HandleTypeDef *htim)
      |        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:262:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  262 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:217:13: warning: 'MX_TIM2_Init' defined but not used [-Wunused-function]
  217 | static void MX_TIM2_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:180:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  180 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:108:8: warning: 'updateClockBuffer' defined but not used [-Wunused-function]
  108 |   void updateClockBuffer()
      |        ^~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

22:43:14 Build Failed. 4 errors, 8 warnings. (took 262ms)

